--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,32 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>4.32.0</version>
+        </dependency>
+
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M9</version>
+                <configuration>
+                    <providers>
+                        <provider>
+                            <name>junit</name>
+                        </provider>
+                        <provider>
+                            <name>testng</name>
+                        </provider>
+                    </providers>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
