--- a/pom.xml
+++ b/pom.xml
@@ -43,16 +43,16 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M9</version>
+                <version>3.2.5</version>
                 <configuration>
-                    <providers>
-                        <provider>
-                            <name>junit</name>
-                        </provider>
-                        <provider>
-                            <name>testng</name>
-                        </provider>
-                    </providers>
+                    <includes>
+                        <include>**/*Test.java</include>
+                        <include>**/*Tests.java</include>
+                        <include>**/*TestSuite.java</include>
+                    </includes>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
+                    </suiteXmlFiles>
                 </configuration>
             </plugin>
         </plugins>
