--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
             <version>4.32.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.19.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -66,6 +72,7 @@
                         <artifactId>surefire-testng</artifactId>
                         <version>3.5.3</version>
                     </dependency>
+
                 </dependencies>
                 <configuration>
                     <includes>
