--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,19 @@
             <version>2.19.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.24.3</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.4.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -71,6 +84,18 @@
                         <groupId>org.apache.maven.surefire</groupId>
                         <artifactId>surefire-testng</artifactId>
                         <version>3.5.3</version>
+                    </dependency>
+
+                    <dependency>
+                        <groupId>org.seleniumhq.selenium</groupId>
+                        <artifactId>selenium-remote-driver</artifactId>
+                        <version>4.32.0</version>
+                        <exclusions>
+                            <exclusion>
+                                <groupId>io.opentelemetry</groupId>
+                                <artifactId>opentelemetry-api</artifactId>
+                            </exclusion>
+                        </exclusions>
                     </dependency>
 
                 </dependencies>
