Completed task Cucumber

--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,19 @@
             <version>7.9.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>7.23.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-junit</artifactId>
+            <version>7.23.0</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -91,7 +104,6 @@
                         <artifactId>surefire-testng</artifactId>
                         <version>3.5.3</version>
                     </dependency>
-
 
                 </dependencies>
                 <configuration>
