Log4j2 task is completed.

--- a/src/test/resources/log4j2-test.properties
+++ b/src/test/resources/log4j2-test.properties
@@ -25,4 +25,4 @@ logger.qux.appenderRef.bar.ref = bar_name
 logger.qux.appenderRef.baz.ref = baz_name
 logger.qux.additivity=true
 
-rootLogger = WARN, foo_name
+rootLogger = TRACE, foo_name
